# syncforge

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_UPGRADE_SUMMARY.md  README.md  chnage.txt  database_structure.txt  db.sqlite3  plan.txt  publish_sdk.txt  report.md  requirements.txt
api/: middleware.py  rate_limit.py  urls.py  views.py
config/: .env.example  settings.py  urls.py
core/: apps.py  logging.py  middleware.py  urls.py  utils.py  views.py
dashboard/: cmd_api.py  jwt_utils.py  middleware.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_apikey_options_alter_tablesyncconfig_options_and_more.py  0002_rename_sf_syncevent_project_idx_dashboard_s_project_011271_idx_and_more.py  0003_remove_tablesyncconfig_version_number_and_more.py  0004_remove_tablesyncconfig_client_devices_and_more.py  0005_tablesyncconfig_duplicates_prevented_and_more.py  0006_alter_apikey_key_prefix.py  0007_alter_tablesyncconfig_unique_together_and_more.py  0008_projectlog.py
sdk/: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
sdk/syncforge/: __init__.py  client.py  core.py  decorators.py  django.py  drf.py  engine.py  events.py  exceptions.py  fastapi.py  flask.py  middleware.py  result.py  scheduler.py  sqlalchemy.py  store.py
templates/: 404.html  429.html  base.html
templates/core/: docs.html  home.html  pricing.html
templates/core/docs/: ai_setup.html  base_docs.html  cache_query.html  cmd.html  deployment.html  django.html  (+12 more)
templates/dashboard/: dashboard.html  login.html  project_detail.html  register.html  super_register.html
